git commit module2/index.html

--- a/module2/index.html
+++ b/module2/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <p>
-            Hello world
-        </p>
-    </body>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="vsiewport" content="width=device-width, initial-scale=1">
+    <title>Assignment Solution for Module 2</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+    <h1>Our Menu</h1>
+    <div class="row">
+    <div class="col-lg-4 col-md-5 col-sm-12 container">
+        <h2 id="oranges">Oranges</h2>
+        <p>Oranges are round orange-coloured fruit that grow on a tree which can reach 10 metres (33 ft) high. Orange trees have dark green shiny leaves and small white flowers with five petals. The flowers smell very sweet which attracts many bees. An orange has a tough shiny orange skin.</p>
+    </div>
+    <div class="col-lg-4 col-md-5 col-sm-12 container">
+        <h2 id="apples">Apples</h2>
+        <p>Apples are round orange-coloured fruit that grow on a tree which can reach 10 metres (33 ft) high. Orange trees have dark green shiny leaves and small white flowers with five petals. The flowers smell very sweet which attracts many bees. An orange has a tough shiny orange skin.</p>
+    </div>
+    <div class="col-lg-4 col-md-5 col-sm-12 container">
+        <h2 id="mangoes">Mangoes</h2>
+        <p>Mangoes are round orange-coloured fruit that grow on a tree which can reach 10 metres (33 ft) high. Orange trees have dark green shiny leaves and small white flowers with five petals. The flowers smell very sweet which attracts many bees. An orange has a tough shiny orange skin.</p>
+    </div>
+</div>
+</body>
+
 </html>
